feat(mainnav): update v3 mainnav

--- a/cypress/apps/angular-app/src/components/mainnav/mainnav.component.html
+++ b/cypress/apps/angular-app/src/components/mainnav/mainnav.component.html
@@ -1,7 +1,8 @@
 <sgds-mainnav>
     <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand">
     <sgds-mainnav-item>ArgsTable Controlled </sgds-mainnav-item>
-    <sgds-mainnav-dropdown togglertext="Dropdown" close="default">
+    <sgds-mainnav-dropdown close="default">
+        <span slot="toggler">Dropdown</span>
         <sgds-dropdown-item href="https://google.com">Item 1</sgds-dropdown-item>
         <sgds-dropdown-item href="#">Item 2</sgds-dropdown-item>
         <sgds-dropdown-item href="#">Item 3</sgds-dropdown-item>
