--- a/src/components/Dropdown/dropdown-item.css
+++ b/src/components/Dropdown/dropdown-item.css
@@ -1,50 +1,78 @@
 .dropdown-item {
-    --sgds-dropdown-item-active-color: #fff;
-    --sgds-dropdown-item-active-bg: var(--sgds-info);
-    --sgds-dropdown-item-disabled-color: var(--sgds-gray-500);
-    background-color: var(--sgds-default-bg-transparent);
-    padding: var(--sgds-padding-sm) var(--sgds-padding-lg);
-    clear: both;
-    display: flex;
-    gap: var(--sgds-gap-sm);
-    align-items: center;
-    color: var(--sgds-default-color);
-    text-align: inherit;
-    white-space: nowrap;
-    cursor: pointer;
-  }
+  --sgds-dropdown-item-active-color: #fff;
+  --sgds-dropdown-item-active-bg: var(--sgds-info);
+  --sgds-dropdown-item-disabled-color: var(--sgds-gray-500);
+  background-color: var(--sgds-default-bg-transparent);
+  padding: var(--sgds-padding-sm) var(--sgds-padding-lg);
+  clear: both;
+  display: flex;
+  gap: var(--sgds-gap-sm);
+  align-items: center;
+  color: var(--sgds-default-color);
+  text-align: inherit;
+  white-space: nowrap;
+  cursor: pointer;
+}
 
-  .dropdown-item:hover {
-    background-color: var(--sgds-default-bg-translucent-subtle);
-  }
-  
-  .dropdown-item:focus,
-  .dropdown-item:focus-visible {
-    outline: 0;
-    box-shadow: inset var(--sgds-form-box-shadow-focus);
-    background-color: var(--sgds-default-bg-translucent-subtle);
-  }
-  
-  .dropdown-item.active,
-  .dropdown-item:active {
-    background-color: var(--sgds-primary-bg-translucent);
-    color: var(--sgds-primary-color);
-    text-decoration: none;
-  }
-  
-  .dropdown-item.disabled,
-  .dropdown-item:disabled {
-    opacity: var(--sgds-opacity-50);
-    pointer-events: none;
-  }
+.dropdown-item:not(.nav-link):hover {
+  background-color: var(--sgds-default-bg-translucent-subtle);
+}
 
-  .active-icon {
-    margin-left: auto;
-  }
+.dropdown-item:not(.nav-link):focus,
+.dropdown-item:not(.nav-link):focus-visible {
+  outline: 0;
+  box-shadow: inset var(--sgds-form-box-shadow-focus);
+  background-color: var(--sgds-default-bg-translucent-subtle);
+}
 
-  ::slotted(*){
-    display: flex;
-    gap: var(--sgds-gap-sm);
-    text-decoration: none !important; 
-    color: inherit !important;
-  }
+.dropdown-item:not(.nav-link).active,
+.dropdown-item:not(.nav-link):active {
+  background-color: var(--sgds-primary-bg-translucent);
+  color: var(--sgds-primary-color);
+  text-decoration: none;
+}
+
+.dropdown-item.disabled,
+.dropdown-item:disabled {
+  opacity: var(--sgds-opacity-50);
+  pointer-events: none;
+}
+
+.active-icon {
+  margin-left: auto;
+}
+
+::slotted(*){
+  display: flex;
+  gap: var(--sgds-gap-sm);
+  text-decoration: none !important; 
+  color: inherit !important;
+}
+
+.nav-link {
+  gap: var(--sgds-gap-xs);
+  padding: var(--sgds-padding-sm) var(--sgds-mainnav-padding-x);
+}
+
+.nav-link:hover {
+  color: var(--sgds-primary-color);
+}
+
+.nav-link:focus,
+.nav-link:focus-visible {
+  outline: 0;
+}
+
+.nav-link:focus-visible {
+  box-shadow: var(--sgds-box-shadow-focus) inset;
+  color: var(--sgds-primary-color);
+}
+
+.nav-link.active {
+  color: var(--sgds-primary-color);
+  background-color: var(--sgds-default-bg-translucent-subtle);
+}
+
+.nav-link.active .active-icon {
+  display: none;
+}
