--- a/src/components/Mainnav/mainnav-dropdown.css
+++ b/src/components/Mainnav/mainnav-dropdown.css
@@ -1,34 +1,60 @@
 :host([expand="always"]) .nav-link {
   padding: 0px var(--sgds-padding-md);
+  border-bottom: var(--sgds-border-width-4) solid transparent;
 }
 
 @media (min-width: 576px) {
   :host([expand="sm"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
+  }
+  
+  :host([expand="sm"]) .nav-link:not(.disabled):focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
   }
 }
 
 @media (min-width: 768px) {
   :host([expand="md"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
+  }
+
+  :host([expand="md"]) .nav-link:not(.disabled):focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
   }
 }
 
 @media (min-width: 992px) {
   :host([expand="lg"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
+  }
+
+  :host([expand="lg"]) .nav-link:not(.disabled):focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
   }
 }
 
 @media (min-width: 1200px) {
   :host([expand="xl"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
+  }
+
+  :host([expand="xl"]) .nav-link:not(.disabled):focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
   }
 }
 
 @media (min-width: 1400px) {
   :host([expand="xxl"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
+  }
+
+  :host([expand="xxl"]) .nav-link:not(.disabled):focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
   }
 }
 
@@ -36,7 +62,6 @@
   display: flex;
   gap: var(--sgds-gap-xs);
   cursor: pointer;
-  border-bottom: var(--sgds-border-width-4) solid transparent;
   min-height: 100%;
   align-items: center;
   text-decoration: none;
@@ -65,10 +90,49 @@
 }
 
 .nav-link:not(.disabled):focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
+  box-shadow: var(--sgds-box-shadow-focus) inset;
+  color: var(--sgds-primary-color);
 }
 
 .nav-link.disabled {
   opacity: var(--sgds-opacity-50);
   cursor: not-allowed;
+}
+
+.dropdown-items {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  padding: var(--sgds-padding-md) 0px;
+  background-color: var(--sgds-default-bg-surface);
+}
+
+.dropdown-items a {
+  display: flex;
+  gap: var(--sgds-gap-xs);
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--sgds-default-color);
+  padding: var(--sgds-padding-sm) var(--sgds-mainnav-padding-x);
+}
+
+.dropdown-items a:hover {
+  color: var(--sgds-primary-color);
+}
+
+.dropdown-items a:focus,
+.dropdown-items a:focus-visible {
+  outline: 0;
+}
+
+.dropdown-items a:focus-visible {
+  box-shadow: var(--sgds-box-shadow-focus) inset;
+  color: var(--sgds-primary-color);
+}
+
+slot[name="toggler"]::slotted(*) {
+  flex: 1;
 }
