--- a/src/components/Mainnav/mainnav-item.css
+++ b/src/components/Mainnav/mainnav-item.css
@@ -1,59 +1,85 @@
 :host([expand="always"]) .nav-link {
   padding: 0px var(--sgds-padding-md);
+  border-bottom: var(--sgds-border-width-4) solid transparent;
 }
 
 @media screen and (min-width: 576px) {
   :host([expand="sm"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
   }
 
   :host([expand="sm"]) .nav-link:not(.disabled).active {
     color: var(--sgds-primary-color);
     border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
   }
+
+  :host([expand="sm"]) .nav-link:focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
+  }
 }
 
 @media screen and (min-width: 768px) {
   :host([expand="md"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
   }
 
   :host([expand="md"]) .nav-link:not(.disabled).active {
     color: var(--sgds-primary-color);
     border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
   }
+
+  :host([expand="md"]) .nav-link:focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
+  }
 }
 
 @media screen and (min-width: 992px) {
   :host([expand="lg"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
   }
 
   :host([expand="lg"]) .nav-link:not(.disabled).active {
     color: var(--sgds-primary-color);
     border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
   }
+  
+  :host([expand="lg"]) .nav-link:focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
+  }
 }
 
 @media screen and (min-width: 1200px) {
   :host([expand="xl"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
   }
 
   :host([expand="xl"]) .nav-link:not(.disabled).active {
     color: var(--sgds-primary-color);
     border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
   }
+
+  :host([expand="xl"]) .nav-link:focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
+  }
 }
 
 @media screen and (min-width: 1400px) {
   :host([expand="xxl"]) .nav-link {
     padding: 0px var(--sgds-padding-md);
+    border-bottom: var(--sgds-border-width-4) solid transparent;
   }
 
   :host([expand="xxl"]) .nav-link:not(.disabled).active {
     color: var(--sgds-primary-color);
     border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
+  }
+
+  :host([expand="xxl"]) .nav-link:focus-visible {
+    box-shadow: var(--sgds-box-shadow-focus);
   }
 }
 
@@ -81,7 +107,7 @@
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
   :host([expand="xxl"]) .nav-link:not(.disabled).active {
     background-color: var(--sgds-default-bg-translucent-subtle);
   }
@@ -90,7 +116,6 @@
 .nav-link {
   display: flex;
   cursor: pointer;
-  border-bottom: var(--sgds-border-width-4) solid transparent;
   min-height: 100%;
   align-items: center;
   text-decoration: none;
@@ -118,7 +143,8 @@
 }
 
 .nav-link:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
+  box-shadow: var(--sgds-box-shadow-focus) inset;
+  color: var(--sgds-primary-color);
 }
 
 .nav-link.disabled {
