--- a/src/components/Mainnav/mainnav.css
+++ b/src/components/Mainnav/mainnav.css
@@ -40,7 +40,6 @@ nav {
 .navbar-nav {
   display: flex;
   flex-direction: column;
-  gap: var(--sgds-gap-xs);
   height: 100%;
   width: 100%;
   margin-top: 0;
@@ -49,12 +48,14 @@ nav {
 
 nav > .navbar-body {
   position: absolute;
-  z-index: 5;
+  bottom: 0;
+  z-index: 2000;
   width: 100%;
   background-color: var(--sgds-default-bg-surface);
   padding: var(--sgds-padding-md) 0px;
   border-top: var(--sgds-border-width-1) solid var(--sgds-default-border-color-translucent);
   box-shadow: 0px 2px 2px 0px rgba(14, 14, 14, 0.08);
+  transition: transform 0.2s ease-in-out;
 }
 
 nav > .navbar-body slot::slotted(:not(sgds-mainnav-item):not(sgds-mainnav-dropdown)) {
@@ -84,7 +85,6 @@ nav > .navbar-body slot::slotted(:not(sgds-mainnav-item):not(sgds-mainnav-dropdo
 }
 
 .navbar-nav-scroll {
-  max-height: 75vh;
   overflow-y: auto;
 }
 
