refactor(combobox): review combo box part 1
use this.emit to dispatch event, rename selected event to convention, update .dropdown-item box
shadow style, combobox value to be a string of ; separated values, checkbox label to have 100% width
to enable checkbox click space to span the entire menu, handle keyboard enter on combobox-item

--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -57,3 +57,7 @@ input {
 .form-check-input[indeterminate].is-invalid {
   background-color: var(--sgds-form-danger-bg);
 }
+
+.form-check-label {
+  width: 100%;
+}
