--- a/src/components/ComboBox/sgds-combo-box-item.css
+++ b/src/components/ComboBox/sgds-combo-box-item.css
@@ -10,6 +10,8 @@
     text-align: inherit;
     white-space: nowrap;
     cursor: pointer;
+    width: 100%;
+    height: 100%;
   }
 
 
@@ -28,8 +30,11 @@
     color: var(--sgds-primary-bg);
     fill: var(--sgds-primary-bg);
 }
-
+.dropdown-item:hover{
+    background: var(--sgds-form-bg-translucent);
+}
 .dropdown-item:focus, .dropdown-item:focus-visible{
     outline: 0;
+    background: var(--sgds-form-bg-translucent);
     box-shadow: inset var(--sgds-form-box-shadow-focus);
 }
