--- a/src/components/ComboBox/sgds-combo-box-item.css
+++ b/src/components/ComboBox/sgds-combo-box-item.css
@@ -10,7 +10,7 @@
     text-align: inherit;
     white-space: nowrap;
     cursor: pointer;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
   }
 
