--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -22,7 +22,7 @@
   border-radius: var(--input-border-radius);
   padding: 0px var(--sgds-form-padding-x);
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  height: var(--sgds-dimension-48);
+  min-height: var(--sgds-dimension-48);
   min-width: var(--sgds-dimension-256);
   width: -webkit-fill-available;
   width: -moz-available;
@@ -89,6 +89,7 @@
   color: var(--sgds-form-color-subtle);
   display: flex;
   gap: var(--sgds-gap-xs);
+  flex-wrap: wrap;
 }
 
 .form-control-group.quantity-toggle {
