--- a/src/components/Dropdown/dropdown-item.css
+++ b/src/components/Dropdown/dropdown-item.css
@@ -11,18 +11,18 @@
     cursor: pointer;
   }
 
-.dropdown-item:hover {
+.dropdown-item:not(.nav-link):hover {
   background-color: var(--sgds-default-bg-translucent-subtle);
 }
 
-.dropdown-item:focus,
-.dropdown-item:focus-visible {
+.dropdown-item:not(.nav-link):focus,
+.dropdown-item:not(.nav-link):focus-visible {
   outline: 0;
   box-shadow: inset var(--sgds-form-box-shadow-focus);
   background-color: var(--sgds-default-bg-translucent-subtle);
 }
 
-.dropdown-item.active {
+.dropdown-item:not(.nav-link).active {
   color: var(--sgds-primary-color);
   background-color: var(--sgds-default-bg-translucent-subtle);
   text-decoration: none;
@@ -39,7 +39,7 @@
   text-decoration: none !important; 
   color: inherit !important;
 }
-/* 
+
 .nav-link {
   gap: var(--sgds-gap-xs);
   padding: var(--sgds-padding-sm) var(--sgds-mainnav-padding-x);
@@ -63,8 +63,3 @@
   color: var(--sgds-primary-color);
   background-color: var(--sgds-default-bg-translucent-subtle);
 }
-
-.nav-link.active .active-icon {
-  display: none;
-}
-   */
