--- a/src/components/Toast/toast-container.css
+++ b/src/components/Toast/toast-container.css
@@ -1,7 +1,3 @@
-:host {
-  --toast-container-slot-elements-gap: 0.5rem;
-}
-
 .toast-container {
   max-width: 100%;
   pointer-events: none;
@@ -63,5 +59,5 @@
 slot {
   display: flex;
   flex-direction: column;
-  gap: var(--toast-container-slot-elements-gap);
+  gap:  0.5rem;
 }
