docs(sidenav): add stories

--- a/src/components/Sidenav/sidenav-link.css
+++ b/src/components/Sidenav/sidenav-link.css
@@ -41,7 +41,7 @@
 
 :host([disabled]) ::slotted(a) {
   opacity: var(--sgds-opacity-50);
-  cursor: not-allowed;
+  pointer-events: none;
 }
 :host([disabled]) ::slotted(a:focus),
 :host([disabled]) ::slotted(a:focus-visible) {
